<resources>
    <string name="app_name">Multi App</string>
    <string name="who_is_winner">Who is Winner</string>
    <string name="enter_your_winner_team">Enter your winner team</string>
    <string name="winners_team">Winners Team</string>


    <!-- Login page-->
    <string name="login_now">Login Now!!</string>
    <string name="username">"  Username"</string>
    <string name="password2">"  Password"</string>
    <string name="enter_your_username">Enter your username*</string>
    <string name="password">Enter your password*</string>
    <string name="stay_signed_in">Stay Signed In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="log_in">Log in</string>
    <string name="enter_your_first_number">Enter your first Number</string>
    <string name="enter_your_second_number">Enter your second Number</string>
    <string name="add">+</string>
    <string name="go_to_calculator">Calculator APP</string>
    <string name="sub">-</string>
    <string name="mulitplication">*</string>
    <string name="divide">/</string>
    <string name="enter_your_recovery_email">Enter your recovery email</string>
    <string name="send_code">SEND CODE</string>
    <string name="multi_app">Multi App</string>
    <string name="logo">LOGO</string>
    <string name="random_highest_mountains_app">Random Highest Mountains APP</string>
    <string name="result_is">Result is :</string>
    <string name="random_highest_mountains_appears_here">Random Highest Mountains</string>
    <string name="shuffle">Shuffle</string>
    <string name="everest_mountain">Everest Mountain</string>
    <string name="dialog_message">Do you want to Quit ? </string>
    <string name="dialog_title">Quit</string>
    <string name="restaurant">Restaurant APP</string>
    <string name="what_do_you_want_to_order">What do you want to Order ? </string>
    <string name="pizza">pizza</string>
    <string name="tea">Tea</string>
    <string name="pepsi">Pepsi</string>
    <string name="coffee">Coffee</string>
    <string name="anise">Anise</string>
    <string name="burger">Burger</string>
    <string name="chicken">Chicken</string>
    <string name="vegetables">Vegetables</string>
    <string name="order_now">Order Now</string>
    <string name="invoice">Your invoice amount is :</string>
    <string name="_3">$ 3</string>
    <string name="_5">$ 5</string>
    <string name="_8">$ 8</string>
    <string name="_6">$ 6</string>
    <string name="_80">$ 80</string>
    <string name="_60">$ 60</string>
    <string name="_50">$ 50</string>
    <string name="_30">$ 30</string>
    <string name="don_t_have_an_account_create_one">Don\'t Have an account? Create one</string>
    <string name="register_now">Register Now!!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dog_or_cat_app">Dog or Cat APP</string>
    <string name="when_talking_to_someone_do_you_maintain_eye_contact">When talking to someone do you maintain eye contact?</string>
    <string name="never">Never</string>
    <string name="sometimes">Sometimes</string>
    <string name="always">Always</string>
    <string name="how_often_do_you_hug_people">How often do you hug people?</string>
    <string name="all_the_time">All the time</string>
    <string name="maybe">Maybe</string>
    <string name="how_do_you_feel_about_tv">How do you feel about TV?</string>
    <string name="never_watch_tv">Never watch TV</string>
    <string name="not_too_much">not too much</string>
    <string name="no">No</string>
    <string name="how_many_times_do_you_tell_somebody_you_love_them">How many times do you tell somebody you love them?</string>
    <string name="daily">Daily</string>
    <string name="occasionally">Occasionally</string>
    <string name="from_time_to_time">From time to time</string>
    <string name="get_result">Get Result</string>
    <string name="your_result_will_appear_here">Your result will appear here</string>
    <string name="temperature_converter">Temperature Converter APP</string>
    <string name="temperature_converter_app">Temperature Converter APP</string>
    <string name="temperature_converter_image">Temperature Converter image</string>
    <string name="enter_your_degree_number">Enter your degree number</string>
    <string name="celsius">Celsius</string>
    <string name="result">Result</string>
    <string name="degree_result">Degree result</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="to">to</string>
    <string name="convert">Convert</string>
    <string name="reset">Reset</string>
    <string name="yat_group">Yat Groupe</string>
    <string name="profilephoto">profilePhoto</string>
    <string name="title">Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="bio_details_app">Bio Details APP</string>
    <string name="nagip_mahfouz">Nagip Mahfouz</string>
    <string name="nagip">DR - Nagip Mahfouz</string>
    <string name="taha_hussien">Taha Hussien</string>
    <string name="media_app">Media App</string>
    <string name="exo_player">Exo Player</string>
    <string name="media_controller">Media Controller</string>
    <string name="justin">Justin</string>
    <string name="testtoast">TestToast</string>
    <string name="javatpoint_website">JavaTpoint Website</string>
    <string name="get_current_location_app">Get Current Location App</string>
    <string name="title_activity_maps">Map</string>
    <string name="connect_3_game">Connect 3 Game</string>
    <string name="image1">image1</string>
    <string name="winner_is">winner is</string>
    <string name="play_again">Play Again</string>
    <string name="log_out">Log Out</string>
    <string name="pdf_viewer">Mobile Track PDF</string>
    <string name="chat_app">Chat APP</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="sending_message">sending message</string>
    <string name="here_is_your_message">Here is your message!!</string>
    <string name="time">Time</string>
    <string name="photomessage">photoMessage</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="calculator_app">Calculator APP</string>
    <string name="emailaddress">EmailAddress</string>

    <string name="tools">Tools</string>
    <string name="entertainment">Entertainment</string>
    <string name="music_player">Music Player</string>
    <string name="video_player">Video Player</string>
    <string name="test">test</string>

</resources>