<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        tools:context=".tools.CalculatorActivity">


        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/m_logo" />

        <EditText
            android:id="@+id/et_firstNumber"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edit_texts"
            android:gravity="center"
            android:hint="@string/enter_your_first_number"
            android:inputType="number"
            android:padding="@dimen/_10sdp"
            android:textColor="#000" />

        <EditText
            android:id="@+id/et_secondNumber"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edit_texts"
            android:gravity="center"
            android:hint="@string/enter_your_second_number"
            android:inputType="number"
            android:padding="@dimen/_10sdp"
            android:textColor="#000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_addition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="0.25"
                android:background="@drawable/buttons"
                android:text="@string/add"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_30sdp" />

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="0.25"
                android:background="@drawable/buttons"
                android:text="@string/sub"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_30sdp" />

            <Button
                android:id="@+id/btn_multiplication"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="0.25"
                android:background="@drawable/buttons"
                android:text="@string/mulitplication"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_30sdp" />

            <Button
                android:id="@+id/btn_division"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:background="@drawable/buttons"
                android:text="@string/divide"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_30sdp" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/result_is"
            android:textColor="@color/background"
            android:textSize="@dimen/_20sdp" />

    </LinearLayout>
</ScrollView>